Renamed some assemblies

--- a/KeystoneBindingsTests/Keystone.NetTests.csproj
+++ b/KeystoneBindingsTests/Keystone.NetTests.csproj
@@ -56,9 +56,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\KeystoneBindings\KeystoneBindings.csproj">
+    <ProjectReference Include="..\KeystoneBindings\Keystone.Net.csproj">
       <Project>{2FE3B804-90F7-4632-B6F4-F72548E26984}</Project>
-      <Name>KeystoneBindings</Name>
+      <Name>Keystone.Net</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
